<resources>
    <string name="app_name">Playsho</string>
    <string name="app_slogan">Play and watch together</string>
    <string name="button_create_room">Create a room</string>
    <string name="button_add_friend">Add friends</string>
    <string name="add_stream_link">Add stream link to play</string>
    <string name="send_message_input_hint">Type a message or link</string>
    <string name="add_video_url_title">Add video link</string>
    <string name="add_video_url_input_hint">Paste or type video link</string>
    <string name="add_video_url_description">You can add any video link from any website with stream support.</string>
    <string name="add_video_url_btn">Add and Play!</string>
    <string name="tutorial">1- Create a room without any hassle!\n2- Drop in a video link like a pro!\n3- Bring your buddies onboard!\n4- Sit back, relax, and enjoy the show! 🍿✨ :)</string>
    <string name="slogan">Play and watch togather</string>
    <string name="create_a_room">Create a room</string>
    <string name="splash_description">1- Create a room without any hassle!\n2- Drop in a video link like a pro!\n3- Bring your buddies onboard!\n4- Sit back, relax, and enjoy the show! 🍿✨ :)</string>
    <string name="add_friends">+ Add friends</string>
    <string name="add_stream_link_to_play">+ Add stream link to play</string>
    <string name="type_a_message_or_link">Type a message or link</string>
    <string name="loading">Loading...</string>
    <string name="join_room">Join Room</string>
    <string name="paste_or_type_your_room_code_ex">Room code: Paste or type it here! 🍿</string>
    <string name="you_can_enter_link">You\'re just one step away from joining the fun. Simply paste or type your room code into the box below. Need help finding it? Look for the unique combination of letters and numbers in your invite link, then enter only the code part here. Let\'s dive into the movie magic together!</string>
    <string name="join">Join</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="your_end_to_end_encryption_key">Your end-to-end encryption key</string>
    <string name="regenerate_keys">Regenerate Keys</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_from_your_account_and_register_again">Sign out from your account and register again</string>
    <string name="rsa_key_pair_successfully_regenerated">🔑 RSA key pair successfully regenerated! 🎉</string>
    <string name="name_successfully_updated">Ta-da! Your name has been successfully updated!</string>
    <string name="rsa_key_pair_fail_regenerated">🔑 Oh no! Something went wrong while regenerating the RSA key pair. 🤯 Please try again later and we\'ll get it sorted out! 🛠️</string>
    <string name="enter_your_name_e_g_john_doe">Enter your name (e.g., John Doe)</string>
    <string name="we_d_love_to_get_to_know_you_better">We\'d love to get to know you better. 😊</string>
    <string name="save">Save</string>
    <string name="hey_there_want_to_level_up_your_experience_with_us">Hey there! Want to level up your experience with us? Throw in your full name! We promise to sprinkle some magic and make your time with us as awesome as a unicorn\'s birthday party! 🦄✨</string>
    <string name="oops_looks_like_the_room_tag_is_missing">Oops! Looks like the room tag is missing. Let\'s fill in that blank space!</string>
    <string name="paste_the_stream_link_here">Paste the stream link here</string>
    <string name="ready_for_some_streaming">Ready for some streaming shenanigans? Drop your stream link into the magic box below and let\'s kick off the ultimate movie night! Don\'t keep the flicks waiting, share the fun with your roomies now!</string>
    <string name="submit">Submit</string>
    <string name="hey_there_it_looks_like_you_haven_t_entered_a_valid_stream_link">Hey there! It looks like you haven\'t entered a valid stream link. Give it another shot!</string>
    <string name="loading_with_dot">Loading...</string>
    <string name="chat">Chat</string>
    <string name="send">Send</string>
</resources>