<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/black_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.playsho.android.component.Sheet
            android:text="@string/we_d_love_to_get_to_know_you_better"
            style="@style/font_h4"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/neutral_900"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
        <EditText
            android:textColorHint="@color/neutral_500"
            style="@style/font_subtitle_regular"
            android:maxLines="1"
            android:paddingEnd="12dp"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:id="@+id/input"
            android:textColor="@color/neutral_900"
            android:hint="@string/enter_your_name_e_g_john_doe"
            android:layout_marginTop="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>


        <com.playsho.android.component.Sheet
            android:text="@string/hey_there_want_to_level_up_your_experience_with_us"
            style="@style/font_body_regular"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/neutral_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.playsho.android.component.Button
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/btn"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            android:layout_marginBottom="32dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

    </LinearLayout>
</layout>